--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             font-size: 1.5rem;
             cursor: pointer;
             padding: 5px;
+            margin-left: auto;
         }
 
         .mobile-menu-btn span {
@@ -77,6 +78,7 @@
             background: white;
             margin: 5px 0;
             transition: 0.3s;
+            border-radius: 2px;
         }
 
         /* Mobile Menu Overlay */
@@ -90,10 +92,13 @@
             background: rgba(10, 14, 39, 0.98);
             z-index: 1001;
             padding: 80px 20px 20px;
+            transform: translateX(100%);
+            transition: transform 0.3s ease;
         }
 
         .mobile-menu.active {
             display: block;
+            transform: translateX(0);
         }
 
         .mobile-menu-close {
