Add responsive world map background asset

--- a/index.html
+++ b/index.html
@@ -906,6 +906,7 @@
         <!-- World Map -->
         <div class="world-map-container">
             <div class="world-map">
+                <img src="assets/images/world-map.svg" alt="Stylized world map showing continents" class="world-map-image" />
                 <!-- Major Powers -->
                 <div class="country-marker usa active innovation" data-country="United States">🇺🇸</div>
                 <div class="country-marker eu active comprehensive" data-country="European Union">🇪🇺</div>
